# VaulTLS

./: .gitignore  CHANGELOG.md  Containerfile  Containerfile.github  README.md
.github/: FUNDING.yml
.github/workflows/: docker-image-dev.yml  docker-image.yml  test.yml
IaC/: README.md
IaC/configs/: .env.production.template
IaC/docker-compose/: development.yml  production.yml  testing.yml
IaC/docker/backend/: Dockerfile
IaC/docker/database/: Dockerfile  postgresql.conf
IaC/docker/frontend/: Dockerfile  default.conf  nginx.conf  security-headers.conf
IaC/kubernetes/base/: configmap.yaml  database.yaml  namespace.yaml  pvc.yaml  secrets.yaml.template
IaC/scripts/: deploy.sh  docker-build.sh  health-check.sh
backend/: Cargo.toml
backend/migrations/04-renewcertificate/: up.sql
backend/migrations/05-multitenancy/: down.sql  up.sql
backend/migrations/05-nameca/: up.sql
backend/migrations/06-crl-support/: down.sql  up.sql
backend/migrations/06-templates-webhooks/: down.sql  up.sql
backend/migrations/06-typeca/: up.sql
backend/migrations/07-client-certificate-types/: down.sql  up.sql
backend/migrations/07-renamecolumns/: down.sql  up.sql
backend/migrations/07-user-device-types/: down.sql  up.sql
backend/migrations/08-revocation/: up.sql
backend/migrations/09-uniqueconstraint/: up.sql
backend/migrations/10-acme/: up.sql
backend/src/: api.rs  cert.rs  constants.rs  db.rs  helper.rs  lib.rs  main.rs  notification.rs  settings.rs  webhook.rs
backend/src/acme/: admin.rs  client_ip.rs  domain.rs  guard.rs  jws.rs  mod.rs  nonce.rs  routes.rs  types.rs
backend/src/api/: deprecation.rs  routes.rs
backend/src/auth/: mod.rs  oidc_auth.rs  password_auth.rs  permissions.rs  session_auth.rs  token_auth.rs
backend/src/certs/: common.rs  mod.rs  ssh_cert.rs  ssl_cert.rs  tls_cert.rs
backend/src/crl/: generator.rs  manager.rs  mod.rs
backend/src/data/: api.rs  audit.rs  crl.rs  enums.rs  error.rs  mod.rs  objects.rs  profile.rs  tenant.rs  token.rs
backend/src/notification/: mail.rs  mod.rs  notifier.rs
backend/tests/: api_test.rs  integration_tests.rs  test_config.rs
backend/tests/api/: api_test_functionality.rs  api_test_safety.rs  audit_tests.rs  bearer_auth_tests.rs  certificate_search_tests.rs  integration_workflow_tests.rs  mod.rs  profile_tests.rs  template_tests.rs  unified_api_tests.rs  webhook_tests.rs
backend/tests/common/: constants.rs  helper.rs  mod.rs  test_client.rs
container/: nginx.conf
docs/: .gitkeep  README.md  acme.md
docs/api/: .gitkeep  authentication.md  endpoints.md  getting-started.md  index.html  migration.md  openapi.yaml  troubleshooting.md
docs/architecture/: .gitkeep
docs/configuration/: environment-variables.md
docs/deployment/: .gitkeep
docs/development/: .gitkeep
docs/features/: certificate-templates.md  webhook-notifications.md
docs/user/: .gitkeep
frontend/: .eslintrc.cjs  .prettierrc  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: ApiClient.ts  acme.ts  auth.ts  cas.ts  certificates.ts  client.ts  users.ts
frontend/src/components/: AcmeTab.vue  CATab.vue  OverviewTab.vue  PaginationControls.vue  ProfileCard.vue  SettingsTab.vue  Sidebar.vue  ThemeToggle.vue  UserTab.vue
frontend/src/composables/: usePageSize.ts  usePagination.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/locales/: en.json  es.json  fr.json
frontend/src/stores/: ca.ts  (+8 more)
scripts/: .gitkeep  README.md
scripts/maintenance/: .gitkeep
tests/: docker-compose.yml
tests/authelia/: configuration.yml  db.sqlite3  users_database.yml
tests/e2e/: Containerfile  conftest.py  requirements.txt  test_01_vaultls.py  test_02_acme.py  test_vaultls.py
(+34 files in other folders)
