[package]
name = "backend"
version = "0.10.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "vaultls"
path = "src/lib.rs"

[profile.release]
incremental = true

[features]
test-mode = []

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.9.0", features = ["secrets", "rapidoc"] }
schemars = { version = "0.8.22", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher"] }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
openssl = "0.10.75"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openidconnect = "4.0.1"
anyhow = "1.0.100"
num_enum = "0.7.5"
lettre = { version = "0.11.19", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
maud = "0.27.0"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
passwords = "3.1.16"
include_dir = "0.7.4"
rusqlite_migration = {  version = "2.3.0", features = ["from-directory"] }
const_format = "0.2.35"
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
derive_deref = "1.1.1"
parking_lot = "0.12.5"
uuid = { version = "1.18.1", features = ["v4"] }
ssh-key = { version = "0.6.7", features = ["ed25519", "alloc", "serde", "encryption"] }
rand = "0.9.2"
zip = "6.0.0"
rand_core = "0.9.3"

[dev-dependencies]
x509-parser = "0.18.0"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
tokio-rustls = "0.26.4"